--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nyc": "^10.0.0"
   },
   "scripts": {
-    "test": "nyc node_modules/mocha/bin/_mocha"
+    "test": "nyc node_modules/mocha/bin/_mocha",
+    "lcov-to-coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
