--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "cjs-noticeboard": "0.0.7",
-    "cjs-sync-hooks": "^0.1.1",
-    "merge-objects": "^1.0.5",
-    "require-directory": "^2.1.1"
+    "cjs-sync-hooks": "0.1.1",
+    "merge-objects": "1.0.5",
+    "require-directory": "2.1.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.15",
