added supe as package keyword

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url": "git+https://github.com/Akamaozu/node-supe.git"
   },
   "keywords": [
+    "supe",
     "erlang",
     "supervisor",
     "process"
