--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "require-directory": "2.1.1"
   },
   "devDependencies": {
+    "c8": "^10.1.3",
     "coveralls": "^3.0.1",
-    "mocha": "^5.2.0",
-    "nyc": "^13.0.0"
+    "mocha": "^5.2.0"
   },
   "scripts": {
-    "test": "nyc mocha --exit",
-    "lcov-to-coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "test": "c8 mocha",
+    "test:coveralls": "c8 report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
