--- a/.github/workflows/run-tests-and-report-coverage.yml
+++ b/.github/workflows/run-tests-and-report-coverage.yml
@@ -18,6 +18,7 @@ jobs:
         cache: 'npm'
 
     - run: npm ci
-    - run: npm run test:coveralls
+    - run: npm test
+    - run: npm run test:coverage:report
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
